tests/diagnostics/cases/imports/01_unresolved_import.home
// Import error: module `nope` cannot be resolved.
import nope::missing

fn main() { let x = 0 }
